<?xml version="1.0" encoding="utf-8"?>



<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/white"
    android:id="@+id/shipping_all_today"

    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.shipping.ShippingFragment">
    <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:text="@string/today_s_all_shipping"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="@dimen/cardView_heading_text_size"

             />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_marginTop="@dimen/text_margin"


        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SN"
            android:textSize="@dimen/cardView_default_text_size"
            android:textColor="@color/white"

            android:textAlignment="center"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/id"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/cardView_default_text_size"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_address"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/cardView_default_text_size"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_name"
            android:textColor="@color/white"
            android:textSize="@dimen/cardView_default_text_size"
            android:textAlignment="center"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/received_item"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/cardView_default_text_size"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/empty_bottles"
            android:textAlignment="center"
            android:textSize="@dimen/cardView_default_text_size"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/cardView_default_text_size"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="0.5"/>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shipping_table"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_gravity="center"/>




    </androidx.appcompat.widget.LinearLayoutCompat>
