<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"

    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="120dp"
        android:layout_marginTop="8dp"
        android:layout_height="120dp"
        app:cardCornerRadius="60dp">
        <ImageView
            android:id="@+id/riderProfileImage"
            android:layout_width="match_parent"
            android:contentDescription="@string/nav_header_desc"
            android:layout_height="match_parent"
            android:src="@drawable/ic_complete_logo"
            >

        </ImageView>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/text_Username"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/text_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>