<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">


    <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:src="@drawable/logo"

                android:layout_height="wrap_content"/>

          <com.google.android.material.imageview.ShapeableImageView
              android:layout_width="wrap_content"
              android:layout_height="170dp"
              android:src="@drawable/ic_line_high"
              />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/prompt_username_or_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        />



    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
         />




</LinearLayout>
</ScrollView>